--- a/pages/home_works.html
+++ b/pages/home_works.html
@@ -69,7 +69,9 @@
           <div class="time_buttons">
             <button class="btn" id="start">Start</button>
             <button class="btn" id="stop">Stop</button>
-            <button class="btn" id="reset">Reset</button>
+            <button class="btn" id="reset">
+              <a style="color: orange" href="">Reset</a>
+            </button>
           </div>
         </div>
       </div>
